# openlib-crawler

./: .env.example  .gitignore  README.md  ai.js  crawler.js  ecosystem.config.js  package-lock.json  package.json  sync.js  terminal saasion .txt  test.js  updater.js
control-panel/: Cargo.toml  README.md
control-panel/src/: app.rs  config.rs  db.rs  error.rs  events.rs  main.rs  models.rs
control-panel/src/services/: github.rs  logs.rs  mod.rs  ollama.rs  openlib.rs  scheduler.rs  system.rs  workers.rs
control-panel/src/tui/: mod.rs
docs/: schema.sql
scripts/: setup-db.js  smoke-test.js  start-ollama.js  stop-ollama.js
src/: cli.js  config.js  db.js  logger.js  server.js
src/services/: aiService.js  appStore.js  duplicateDetector.js  githubClient.js  readmeParser.js  repositoryMapper.js  scoringService.js  screenshotService.js  syncService.js
src/utils/: json.js  queue.js  retry.js  text.js  time.js  url.js
src/workers/: aiWorker.js  crawlerWorker.js  screenshotWorker.js  syncWorker.js  updaterWorker.js
