[package]
name = "openlib-control-panel"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Rust Ratatui control center for OpenLib Crawler operations"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
crossterm = "0.28"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ratatui = "0.28"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
thiserror = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
